--- a/index.html
+++ b/index.html
@@ -8,17 +8,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 class="title">코딩알려주는 누나 자바스크립트 강의 출시 임박!!</h1>
+    <h1 class="title">2022 위스콘신 동창화 개최!!</h1>
     <div class="content">
-        <h2>코딩알려주는 누나 강의가 이번달 11월 30일에 출시 될 예정입니다!</h2>
+        <P>위스콘신 동창회!</P>
         <img src="https://image.shutterstock.com/image-vector/amazing-colorful-vector-concept-word-260nw-1436585777.jpg"/>
+          <img src="https://images.chosun.com/resizer/gq7uykbUWjM3d4u6NWsKO_oHg1g=/616x0/smart/cloudfront-ap-northeast-1.images.arcpublishing.com/chosun/ZIDN7JZEF5BKBGAB7P5OVH5RRA.jpg"/>
         <p>저번 HTML/CSS 강의때는 이를 갈고 만들었다면 이번에는 <strong>잇몸을 갈고</strong> 만들었습니다</p>
-        <h3>많이 사랑해 주실거죠???</h3>
-        <h2>하하핳 넷리파이 테스트 완료</h2>
-        <h2>이게 진짜 마지막이다!!!</h2>
-        <h2> 수정하다 2022 6 17 11:52 !!</h2>
+        <h3> 반갑습니다 동창여러분</h3>
+        <P> 수정하다 2022 6 15 롯데호텔 저녁 7시 !!</P>
     </div>
-    
-    
+
 </body>
 </html>
