--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 class="title">2022 위스콘신 동창화 개최!!</h1>
+    <h1 class="title">2022 위스콘신 동창회 개최!!</h1>
     <div class="content">
         <P>위스콘신 동창회!</P>
-        <img src="https://image.shutterstock.com/image-vector/welcome-colorful-vector-concept-word-260nw-1436585777.jpg"/>
+        
           <img src="https://images.chosun.com/resizer/gq7uykbUWjM3d4u6NWsKO_oHg1g=/616x0/smart/cloudfront-ap-northeast-1.images.arcpublishing.com/chosun/ZIDN7JZEF5BKBGAB7P5OVH5RRA.jpg"/>
        
         <h3> 반갑습니다 동창여러분</h3>
